@@ -25,6 +25,7 @@ linux (5.5.5-1~exp1) UNRELEASED; urgency=medium
   * [x86,arm64] Move linux-headers metapackages to src:linux-signed-*.
     This should ensure that src:linux and src:linux-signed-* transition to
     testing together.
+  * debian/bin/gencontrol_signed.py: Generate valid versions in a linux binNMU
 
   [ Aurelien Jarno ]
   * [riscv64] Enable SECCOMP.
